# RBM-dimer

./: .gitignore  .gitmodules  CMakeLists.txt  example.py  lattice.py  main.cpp  numpy.jl  readme.md
notebooks/: RBM.mpack  gs-ising.ipynb  rbm.ipynb  test.mpack  trinagular.ipynb
pytests/: draw_lattice.py  test_lattice.py
spinlattice/: CMakeLists.txt  LatticesPath.hpp.in  lattice.jl  lattice.py  lattices.xml  main.cpp
spinlattice/include/: graph.hpp  test.hpp
spinlattice/models/: constraint.py  dimer.py
spinlattice/src/: graph.cpp  test.cpp
spinlattice/tests/: draw_lattice.py  test_ham.py  test_lattice.cpp  test_lattice.jl  test_lattice.py
tests/: CMakeLists.txt  TestLatticesPath.hpp.in  debug.py  draw_lattice.py  lattice_examples.xml  test_dimer.py  test_lattice.cpp  test_lattice.py
